[metadata]
name = inteq
version = 0.1.0
author = Matthew Wildrick Thomas
author_email = matthew.thomas@northwestern.edu
description = Solve various integral equations using the numerical methods of Betto and Thomas (2021).
license = MIT License
platform = OS Independent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mwt/inteq
project_urls =
    Bug Tracker = https://github.com/mwt/inteq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
install_requires = 
    numpy >= 1.7.0
    scipy
